Add check_connection_failure_reason to metadata